k8s-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-frontend-piotr-goryl
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: sso
      student: piotr-goryl
  template:
    metadata:
      labels:
        component: sso
        student: piotr-goryl
    spec:
      containers:
        - name: static
          image: piogor/sso-frontend-piotr-goryl:exam
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
              ephemeral-storage: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
