k8s-config/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-frontend-piotr-goryl
spec:
  type: ClusterIP
  selector:
    component: sso
    student: piotr-goryl
  ports:
    - port: 3000
      targetPort: 3000
